# tinkerboard2-opencv-installer

./: README.md  installer.sh
TestCV/cpp/: CMakeLists.txt  main.cpp
TestCV/python/: main.py
